# easystat

./: README.md  pyproject.toml
src/easystat/: shortcuts.py
tests/: try_shortcuts.py
