[tool.poetry]
name = "easystat"
version = "0.1.0"
description = ""
authors = ["Sep-Binkhorst <sepbinkhorst@gmail.com>"]
readme = "README.md"
packages = [{include = "easystat", from = "src"}]

[tool.poetry.dependencies]
python = "^3.13"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
